@@ -85,7 +85,13 @@ ${error.file}
 23:-XX:CompileCommand=dontinline,java/lang/invoke/MethodHandle.asTypeUncached
 
 21-:-javaagent:agent/opensearch-agent.jar
-21-:--add-opens=java.base/java.nio=org.apache.arrow.memory.core,ALL-UNNAMED
+21-:--add-opens=java.base/java.nio=ALL-UNNAMED
+
+# To silence the JNA restricted-native warning
+21-:--enable-native-access=ALL-UNNAMED
+
+# To silence the sun.misc.Unsafe terminal deprecation warning from ByteBuddy
+24-:--sun-misc-unsafe-memory-access=allow
 
 # For cases with high memory-mapped file counts, a lower value can improve stability and
 # prevent issues like "leaked" maps or performance degradation. A value of 1 effectively
